--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 buildscript {
-	ext {
-		springBootVersion = '1.5.6.RELEASE'
-	}
-	repositories {
-		mavenCentral()
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-	}
+    ext {
+        springBootVersion = '1.5.6.RELEASE'
+    }
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+    }
 }
 
 apply plugin: 'java'
@@ -17,15 +17,16 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
 repositories {
-	mavenCentral()
+    mavenCentral()
 }
 
 
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-data-jpa')
-//	compile('org.liquibase:liquibase-core')
-	runtime('com.h2database:h2')
-	compileOnly('org.projectlombok:lombok')
-	compile group: 'org.hibernate', name: 'hibernate-java8', version: '5.0.12.Final'
-	testCompile('org.springframework.boot:spring-boot-starter-test')
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('org.liquibase:liquibase-core')
+    runtime('com.h2database:h2')
+    compileOnly('org.projectlombok:lombok')
+    compile group: 'org.hibernate', name: 'hibernate-java8', version: '5.0.12.Final'
+    compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.43'
+    testCompile('org.springframework.boot:spring-boot-starter-test')
 }
